# Alvaro-2

./: .gitignore  QQQ_Stochastic_Forecasting_Engine.ipynb  README.md  jarvis_main.py  main.py  pyproject.toml  requirements-optional.txt  requirements.txt
.claude/ecc/: install-state.json
examples/: run_demo.py  run_jarvis_demo.py  run_ranking_demo.py
quant_terminal/: __init__.py
quant_terminal/aggregation/: __init__.py  bayesian.py  signal_aggregator.py
quant_terminal/alerts/: __init__.py  dashboard.py  multi_channel.py  telegram_alerts.py
quant_terminal/analysis/: __init__.py  real_time_ranking.py
quant_terminal/config/: config.example.yaml  jarvis_config.example.yaml
quant_terminal/dashboard/: __init__.py  main_dashboard.py
quant_terminal/decision/: __init__.py  risk_manager.py  trade_executor.py  trading_system.py
quant_terminal/ingestion/: __init__.py  forex_factory.py  kafka_producer.py  market_data.py  news_aggregator.py  orchestrator.py  twitter_analyzer.py
quant_terminal/jarvis/: __init__.py  assistant.py  daily_advisor.py  llm.py  telegram_bot.py
quant_terminal/microstructure/: __init__.py  flash_crash.py  (+14 more)
tests/: conftest.py  test_aggregation.py  test_decision.py  test_jarvis.py  test_main_demo.py  test_module1_batch1.py  test_module1_batch2.py  test_module1_batch3.py  test_module2_batch1.py  test_module2_batch2.py  test_module2_batch3.py  test_module3_batch1.py  test_module3_batch2.py  test_module3_batch3.py  test_processing_extra.py  test_ranking.py  test_stochastic.py  test_technical.py  test_telegram.py  test_telegram_bot.py
(+48 files in other folders)
