[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-terminal"
version = "0.1.0"
description = "Terminal de trading cuantitativa institucional (multi-fuente, confluencia de señales)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "ta>=0.11",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["quant_terminal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
